Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109875

-Werror=type-limits for src/corelib/tools/qoffsetstringarray_p.h:85:27

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • 6.4.3, 6.5.0, 6.6.0
    • 6.6
    • Core: Other
    • None
    • Linux/Yocto
    • cf145a34b (dev), 5e31131df (6.4), 4732c9300 (6.5)

    Description

      gcc-armv7 & gcc-arm64

      https://testresults.qt.io/coin/integration/qt/qtbase/tasks/web_qt_qtbase_1672926926978

      https://testresults.qt.io/coin/api/results/qt/qtbase/1d59cc3755057803c3ed1a9d4dd31540c0cfba98/LinuxUbuntu_20_04x86_64LinuxQEMUarmv7GCCqtci-linux-Ubuntu-20.04-x86_64-50-67f8e7Sccache_UseConfigure/5523b539d80bf883e5105f3698b0a2da141e7441/build_1681205862/log.txt.gz

      /home/liangqi/qt/qtbase-armv7-build/include/QtCore/6.6.0/QtCore/private/../../../../../../qtbase/src/corelib/tools/qoffsetstringarray_p.h:85:27: error: comparison is always false due to limited range of data type [-Werror=type-limits]
         85 |     if constexpr (Highest <= (std::numeric_limits<quint8>::max)()) {
            |                   ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      cc1plus: all warnings being treated as errors
      [263/3017] Building CXX object src/3rdparty/harfbuzz-ng/CMakeFiles/BundledHarfbuzz.dir/src/hb-subset.cc.o
      ninja: build stopped: subcommand failed.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes